--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,25 +9,23 @@ on:
 
       
       
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    
-    steps:
-    -
-      name: Checkout
-      uses: actions/checkout@v3
-    -
-      name: Login to Docker Hub
+build:
+  name: Build Docker Images
+  runs-on: ubuntu-latest
+  steps:
+    - name: Checkout
+      uses: actions/checkout@v1
+  
+    - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
         username: ${{secrets.DOCKERHUB_USERNAME}}
         password: ${{secrets.DOCKERHUB_TOKEN}}
-    -
-      name: Set up Docker Buildx
+    
+    - name: Set up Docker Buildx
       uses: docker/setup/buildx-action@v2
-    -
-      name: Build and push
+    
+    - name: Build and push
       uses: docker/build-push-action@v3
       with:
         context: .
