--- a/Django/Dockerfile
+++ b/Django/Dockerfile
@@ -8,7 +8,7 @@ COPY requirements.txt requirements.txt
 
 RUN pip install -r requirements.txt
 
-COPY . .
+COPY ./Django .
 
 RUN python manage.py makemigrations mysite
 CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
