--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,29 +7,31 @@ on:
     branches: ["main"]
 
 jobs:
-      
-      
-build:
-  name: Build Docker Images
-  runs-on: ubuntu-latest
-  steps:
-    - name: Checkout
-      uses: actions/checkout@v1
-  
-    - name: Login to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{secrets.DOCKERHUB_USERNAME}}
-        password: ${{secrets.DOCKERHUB_TOKEN}}
-    
-    - name: Set up Docker Buildx
-      uses: docker/setup/buildx-action@v2
-    
-    - name: Build and push
-      uses: docker/build-push-action@v3
-      with:
-        context: .
-        file: /info212---oblig4/.github
+        
+  build:
 
-        push: true
-        tags: ${{secrets.DOCKERHUB_USERNAME}}/django-docker:latest
+    name: Build Docker Images
+
+    runs-on: ubuntu-latest
+
+    steps:
+      -
+        name: Checkout
+        uses: actions/checkout@v1
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{secrets.DOCKERHUB_USERNAME}}
+          password: ${{secrets.DOCKERHUB_TOKEN}}
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup/buildx-action@v2
+      -
+        name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: /info212---oblig4/.github
+          push: true
+          tags: ${{secrets.DOCKERHUB_USERNAME}}/django-docker:latest
