--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,20 +10,18 @@ jobs:
         
   build:
 
-    name: Build Docker Images
-
     runs-on: ubuntu-latest
 
     steps:
       -
         name: Checkout
-        uses: actions/checkout@v1
+        uses: actions/checkout@v3
       -
         name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{secrets.DOCKERHUB_USERNAME}}
-          password: ${{secrets.DOCKERHUB_TOKEN}}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
         name: Set up Docker Buildx
         uses: docker/setup/buildx-action@v2
@@ -32,6 +30,6 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
-          file: /info212---oblig4/.github
+          file: ./Dockerfile
           push: true
           tags: ${{secrets.DOCKERHUB_USERNAME}}/django-docker:latest
