--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,18 +10,20 @@ jobs:
         
   build:
 
+    name: Build Docker Images
+
     runs-on: ubuntu-latest
 
     steps:
       -
         name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v1
       -
         name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{secrets.DOCKERHUB_USERNAME}}
+          password: ${{secrets.DOCKERHUB_TOKEN}}
       -
         name: Set up Docker Buildx
         uses: docker/setup/buildx-action@v2
@@ -30,8 +32,6 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
-          file: ./Dockerfile
+          file: /info212---oblig4/.github
           push: true
           tags: ${{secrets.DOCKERHUB_USERNAME}}/django-docker:latest
-
-#push
